# Wave-Model

./: .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  csad_model.ipynb  data_analysis.ipynb  pyproject.toml  realization.ipynb  requirements.txt  test_utils.py  test_wave_spectra.py  utils.py  wave_loads.py  wave_spectra.py
.github/workflows/: publish-package.yml
Observer/: EKF.py  observer.py  testObserver.ipynb
demos/: README.md  basic_controllers.py  multi_dir_wave_demo.py  wave_elevation_demo.py  wave_loads_demo.py  waypoint_reference_model.py
demos/animations/: waves1d.py  waves1d_yz.py  waves3d.py
demos/control/: backstepping_ctrl.py  basic_controllers.py  evaluate_FS copy 2.py  evaluate_FS copy.py  evaluate_FS.py
demos/guidance/: reference_filter.py
demos/observer/: ekf3dof.py  ltvkf3dof.py  nonlinobs3dof.py
demos/thrust/: sim_w_allocation.py  thrust_allocation.py
demos/vessels/: indentification.py  response_plots.py
demos/waves/: computational_speed.py  multi_dir_wave_demo.py  wave_elevation_demo.py  wave_loads_demo.py
docs/: conf.py  getting_started.rst  index.rst
docs/modules/: control.rst  guidance.rst  observer.rst  simulator.rst  thrust_allocation.rst  utils.rst  waves.rst
docs/tutorials/: simulation.rst  waveload.rst
notebooks/: README.md  csad_3dof_model.ipynb  csad_6dof_model.ipynb  csad_model.ipynb  data_analysis.ipynb  gunnerus_data.ipynb  gunnerus_man_3dof.ipynb  plots.ipynb  realization.ipynb
observer/: base_observer.py
ros/csad_node/: package.xml
ros/csad_node/src/: csad_node.cpp
ros/src/csad_actuator_driver/: package.xml
ros/src/thrust_allocation/src/: thrust_allocation_node.py
ros_ws/: README.md
ros_ws/src/: read_bagfiles.py
ros_ws/src/controller/: CMakeLists.txt  package.xml
ros_ws/src/controller/src/: fourier_series  joystick  pd  pid
ros_ws/src/csad_actuator_driver/: CMakeLists.txt  package.xml
ros_ws/src/csad_actuator_driver/include/csad_actuator_driver/: csad_actuator.h
ros_ws/src/csad_actuator_driver/src/: csad_actuator.cpp
ros_ws/src/csad_node/: CMakeLists.txt  package.xml
ros_ws/src/guidance/: CMakeLists.txt  package.xml
ros_ws/src/guidance/src/: convert_measurements.py  filter  path_param
ros_ws/src/launch/: package.xml
ros_ws/src/launch/launch/: basinTest.launch  simulator.launch  test.launch  waveSim.launch
ros_ws/src/messages/: CMakeLists.txt  package.xml
ros_ws/src/messages/msg/: Observer_state.msg  Reference.msg
ros_ws/src/mission/: CMakeLists.txt  package.xml
ros_ws/src/mission/src/: mission
ros_ws/src/observer/: CMakeLists.txt  package.xml
ros_ws/src/observer/src/: ekf  kf  nlpo  smallGain
ros_ws/src/simulator/: CMakeLists.txt  package.xml
ros_ws/src/simulator/src/: csad
ros_ws/src/thrust_allocator/: CMakeLists.txt  package.xml
ros_ws/src/thrust_allocator/src/: fixed  pseudo_inv
simulator/: csad.py  gunnerus.py  vessel.py
src/MCSimPython/: utils.py
src/MCSimPython/control/: __init__.py  adaptiveFS.py  backstepping.py  basic.py
src/MCSimPython/guidance/: __init__.py  filter.py  path_param.py
src/MCSimPython/observer/: __init__.py  ekf.py  ltv_kf.py  nonlinobs.py
src/MCSimPython/simulator/: __init__.py  csad.py  gunnerus.py  thruster_dynamics.py  vessel.py
src/MCSimPython/thrust_allocation/: README.md  allocation.py  constraints.py  params.ymal  test_allocate.ipynb  thruster.py
src/MCSimPython/vessel_data/CSAD/: CSAD_model.mat  freqs.npy  headings.npy  thruster_data.py  vessel_json.json
src/MCSimPython/vessel_data/gunnerus/: gunnerusABC.json  gunnerus_veres.json  parV_RVG6DOF.pkl  rvg3ABC_config.json  rvg3ABC_config_.json
src/MCSimPython/waves/: __init__.py  wave_loads.py  wave_spectra.py  wave_spreading.py
src/simulator/: csad.py  gunnerus.py  vessel.py
src/vessel_data/CSAD/: vesselABC_json.json
src/waves/: wave_loads.py  wave_spectra.py
tests/: README.md  test_utils.py  test_wave_spectra.py
vessel_data/CSAD/: CSAD_modelABC.mat  csad_params.json
vessel_data/gunnerus/: parV_RVG3DOF.pkl
waves/: wave_loads.py
