[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "MCSimPython"
version = "0.0.13"
authors = [
  { name="Jan-Erik Hygen", email="janereh@stud.ntnu.no" },
]
description = "Python vessel simulation environment"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "matplotlib"
]

keywords = [
  'mcsim',
  'MCSimPython',
  'DP',
  'dynamic positioning',
  'Marine Cybernetics'
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
