<?xml version="1.0"?>
<package format="2">
  <name>csad_actuator_driver</name>
  <version>0.0.0</version>
  <description>The scad_actuator_driver package</description>


  <maintainer email="pi@todo.todo">pi</maintainer>

  <license>GPL-3.0</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <depend>dynamixel_sdk</depend>
  <depend>std_msgs</depend>


  <export>


  </export>
</package>
