<?xml version="1.0"?>
<package format="2">
  <name>csad_node</name>
  <version>0.0.0</version>
  <description>The csad_node package</description>

  <maintainer email="pi@todo.todo">pi</maintainer>


  <license>GPL-3.0</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>csad_actuator_driver</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>csad_actuator_driver</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>csad_actuator_driver</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <export>
  
  </export>
</package>
