<?xml version="1.0"?>
<package format="2">
  <name>launch</name>
  <version>0.0.0</version>
  <description>The launch package</description>

  <maintainer email="dplab6@todo.todo">dplab6</maintainer>

  <license>GPL-3.0</license>


  <buildtool_depend>catkin</buildtool_depend>


  <export>

  </export>
</package>
