<?xml version="1.0"?>
<package format="2">
  <name>thrust_allocator</name>
  <version>0.0.0</version>
  <description>The thrust_allocator package</description>


  <maintainer email="dplab6@todo.todo">dplab6</maintainer>


  <license>GPL-3.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <export>

  </export>
</package>
